M2147 Migration Pebble Github

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "sopheos/pebble_dataconverter",
     "description": "Data Mapper",
+    "license": "MIT",
     "require": {
         "php": ">=8.1.0"
     },
